<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_marginLeft="@dimen/margin_17dp"
    android:layout_marginRight="@dimen/margin_17dp"
    android:layout_height="fill_parent">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin_5dp"
        android:padding="@dimen/padding_login"
        android:background="@drawable/login_animation"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/et_id_login"
            android:background="@color/bg_app"
            android:singleLine="true"
            android:hint="@string/hint_id"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:textColorHint="@color/md_green_500"
            android:textSize="@dimen/text_size_20dp"
            android:textColor="@color/md_green_500"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/margin_5dp"
        android:padding="@dimen/padding_login"
        android:paddingBottom="@dimen/margin_5dp"
        android:background="@drawable/login_animation"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/hint_pass"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/margin_5dp"
            android:textColorHint="@color/md_green_500"
            android:id="@+id/et_pass_login"
            android:password="true"
            android:background="@color/bg_app"
            android:textColor="@color/md_green_500"
            android:textSize="@dimen/text_size_20dp"
            android:layout_height="wrap_content"
            />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:id="@+id/pin_state_login"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/md_green_500"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:id="@+id/state_login"
            android:textSize="@dimen/text_size_15dp"
            android:text="@string/un_save_state_login"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">
        <ProgressBar
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:id="@+id/pg_ligin"
            style="@android:style/Widget.Material.ProgressBar"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:visibility="visible"
            android:background="@color/md_blue_500"
            android:id="@+id/bt_login"
            android:text="Đăng Nhập"
            android:minWidth="250dp"
            android:layout_gravity="center"
            android:textColor="@color/md_white_1000"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</LinearLayout>